<resources>
    <string name="app_name">Wahrscheinlich</string>

    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>

    //Log In
    <string name="log_in">Log In</string>
    <string name="forgot_password">Forgot Password?</string>

    //Register
    <string name="name">Name</string>
    <string name="last_name">Last name</string>
    <string name="confirm_password">Confirm password</string>

    //Register password
    <string name="reset_password">Reset Password</string>

    //User
    <string name="welcome">Welcome</string>

    //Profile
    <string name="take_photo">Take Photo</string>
    <string name="select_photo">Select Photo</string>

    //Errors
    <string name="error_email">Incorrect email</string>
    <string name="error_pass_match">Passwords don\'t match</string>

    //Accept
    <string name="accept">Accept</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    
    //Requests
    <string name="apod">Apod</string>
    <string name="earth">Earth</string>


</resources>
