<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   android:padding="@dimen/default_activity_padding"
>

    <TextView
            android:id="@+id/titleRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/inputRegisterName"
            android:gravity="center"
            android:fontFamily="sans-serif-thin"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:layout_marginBottom="@dimen/button_bottom_margin"

    />
    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputRegisterName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/titleRegister"
            app:layout_constraintBottom_toTopOf="@id/inputRegisterLastName"
            style="@style/text_input"
            android:hint="@string/name"
            app:hintEnabled="true"

    >
        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputRegisterNameText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
        />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputRegisterLastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/inputRegisterName"
            app:layout_constraintBottom_toTopOf="@id/inputRegisterEmail"
            style="@style/text_input"
            android:hint="@string/last_name"
            app:hintEnabled="true"
    >
        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputRegisterLastNameText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
        />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputRegisterEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/inputRegisterLastName"
            app:layout_constraintBottom_toTopOf="@id/inputRegisterPassword"
            style="@style/text_input"
            android:hint="@string/email"
            app:hintEnabled="true"

    >
        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputRegisterEmailText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
        />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputRegisterPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/inputRegisterEmail"
            app:layout_constraintBottom_toTopOf="@id/inputConfirmPassword"
            style="@style/text_input"
            android:hint="@string/password"
            app:hintEnabled="true"
            app:passwordToggleEnabled="true"

    >
        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputRegisterPasswordText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
        />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/inputRegisterPassword"
            app:layout_constraintBottom_toTopOf="@id/buttonRegister"
            style="@style/text_input"
            android:hint="@string/confirm_password"
            app:hintEnabled="true"
            app:passwordToggleEnabled="true"
            android:layout_marginBottom="@dimen/button_bottom_margin"
    >
        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputConfirmPasswordText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
        />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonRegister"
            android:layout_width="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="@string/register"
            style="@style/primary_button"
            />

</androidx.constraintlayout.widget.ConstraintLayout>