<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   android:padding="@dimen/default_activity_padding"
>

    <TextView
            android:id="@+id/userName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/profilePicture"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:text="@string/welcome"
            app:layout_constraintVertical_chainStyle="spread_inside"
    />

    <ImageView
            android:id="@+id/profilePicture"
            android:layout_width="match_parent"
            android:layout_height="@dimen/profile_picture_height"
            app:layout_constraintTop_toBottomOf="@id/userName"
            app:layout_constraintBottom_toTopOf="@id/takePhotoButton"
    />

    <com.google.android.material.button.MaterialButton
            android:id="@+id/takePhotoButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/openImageButton"
            app:layout_constraintTop_toBottomOf="@id/profilePicture"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="@string/take_photo"
            style="@style/secondary_button"
    />
    <com.google.android.material.button.MaterialButton
            android:id="@+id/openImageButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/takePhotoButton"
            app:layout_constraintBottom_toBottomOf="@id/takePhotoButton"
            app:layout_constraintLeft_toRightOf="@id/takePhotoButton"
            app:layout_constraintRight_toRightOf="parent"
            android:text="@string/select_photo"
            style="@style/secondary_button"
    />
</androidx.constraintlayout.widget.ConstraintLayout>