<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   android:padding="@dimen/default_activity_padding"
>


    <TextView
            android:id="@+id/textRequest"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/accept"
            app:layout_constraintTop_toTopOf="parent"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
    />


    <ProgressBar
            android:id="@+id/progressRequest"
            android:layout_width="@dimen/progress_bar"
            android:layout_height="@dimen/progress_bar"
            app:layout_constraintTop_toBottomOf="@id/textRequest"
            app:layout_constraintBottom_toTopOf="@id/buttonApod"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
    />
    <include
            android:id="@+id/apodItem"
            layout="@layout/item_apod"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/textRequest"
            app:layout_constraintBottom_toTopOf="@id/buttonApod"
    />

    <include
            android:id="@+id/earthItem"
            layout="@layout/item_earth"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/textRequest"
            app:layout_constraintBottom_toTopOf="@id/buttonApod"
    />



    <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonApod"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/apod"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/buttonEarth"
            style="@style/secondary_button"

    />
    <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonEarth"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/earth"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toRightOf="@id/buttonApod"
            style="@style/secondary_button"
    />

</androidx.constraintlayout.widget.ConstraintLayout>